--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "aoc_2022"}]
 
 [tool.poetry.dependencies]
 python = "3.11"
+click = "^8.1.3"
+requests = "^2.28.1"
 
 
 [build-system]
